Make sure zc.buildout's test requirements are fetched.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,16 @@
 [buildout]
 develop = .
+extensions = mr.developer
 parts = test
+auto-checkout = zc.buildout
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = plone.recipe.codeanalysis [tests]
+
+[sources]
+zc.buildout = git git://github.com/buildout/buildout.git
+
+[versions]
+zc.buildout = 2.1.0
 
