Downgrade to zc.buildout 1.7.1

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,30 @@
 [buildout]
 develop = .
 extensions = mr.developer
-parts = test
+parts = 
+    test
+    flake8
+    codeanalysis
 auto-checkout = zc.buildout
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = plone.recipe.codeanalysis [tests]
 
+[flake8]
+recipe = zc.recipe.egg
+eggs = flake8
+entry-points = flake8=flake8.main:main
+
+[codeanalysis]
+recipe = plone.recipe.codeanalysis
+pre-commit-hook = True
+flake8-complexity = 10
+flake8-ignore = E226,E302,E41
+flake8-max-line-length = 160
+
 [sources]
 zc.buildout = git git://github.com/buildout/buildout.git
 
 [versions]
-zc.buildout = 2.1.0
-
+zc.buildout = 1.7.1
