--- a/buildout.cfg
+++ b/buildout.cfg
@@ -27,4 +27,6 @@ flake8-max-line-length = 160
 zc.buildout = git git://github.com/buildout/buildout.git
 
 [versions]
-zc.buildout = 1.7.1
+zc.buildout = 2.1.0
+zc.recipe.egg = 2.0.0
+ 
