codeanalysis => code-analysis.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@ extensions = mr.developer
 parts = 
     test
     flake8
-    codeanalysis
+    code-analysis
 auto-checkout = zc.buildout
 
 [test]
@@ -16,7 +16,7 @@ recipe = zc.recipe.egg
 eggs = flake8
 entry-points = flake8=flake8.main:main
 
-[codeanalysis]
+[code-analysis]
 recipe = plone.recipe.codeanalysis
 pre-commit-hook = True
 flake8-complexity = 10
