zopepy section is still required.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,7 @@ develop = .
 extensions = mr.developer
 parts = 
     test
+    zopepy
     flake8
     code-analysis
 auto-checkout = zc.buildout
@@ -10,6 +11,12 @@ auto-checkout = zc.buildout
 [test]
 recipe = zc.recipe.testrunner
 eggs = plone.recipe.codeanalysis [tests]
+
+[zopepy]
+recipe = zc.recipe.egg
+eggs = ${test:eggs}
+interpreter = zopepy
+scripts = zopepy
 
 [flake8]
 recipe = zc.recipe.egg
