Add directory option to code-analysis section.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 develop = .
 extensions = mr.developer
-parts = 
+parts =
     test
     zopepy
     flake8
@@ -24,6 +24,7 @@ entry-points = flake8=flake8.main:main
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
+directory = plone/recipe/codeanalysis
 pre-commit-hook = True
 flake8-complexity = 10
 flake8-ignore = E226,E302,E41
@@ -33,5 +34,5 @@ flake8-max-line-length = 160
 zc.buildout = git git://github.com/buildout/buildout.git
 
 [versions]
-zc.buildout = 1.7.1 
- 
+zc.buildout = 1.7.1
+
