Add flake8 config options.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,6 +14,7 @@ directory = plone/recipe/codeanalysis
 pre-commit-hook = True
 flake8-complexity = 10
 flake8-ignore = E226,E302,E41
+flake8-exclude = bootstrap.py
 flake8-max-line-length = 160
 
 [versions]
