Fix code analysis dir.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,7 +10,7 @@ eggs = plone.recipe.codeanalysis [tests]
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
-directory = plone/recipe/codeanalysis
+directory = ${buildout:directory}/plone/recipe/codeanalysis
 pre-commit-hook = True
 flake8-complexity = 10
 flake8-ignore = E226,E302,E41
