Do not run jshint by default.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,6 +16,7 @@ flake8-complexity = 10
 flake8-ignore = E226,E302,E41
 flake8-exclude = bootstrap.py
 flake8-max-line-length = 160
+jshint = True
 
 [versions]
 zc.buildout = 1.7.1
