--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,7 @@ develop = .
 parts =
     test
     code-analysis
+versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
@@ -20,4 +21,5 @@ jshint = True
 
 [versions]
 zc.buildout = 1.7.1
-
+zc.recipe.egg = 1.3.2
+zope.testrunner = 4.0.4
