--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,6 +20,7 @@ flake8-max-line-length = 160
 jshint = True
 
 [versions]
+distribute = 0.6.49
 zc.buildout = 1.7.1
 zc.recipe.egg = 1.3.2
 zope.testrunner = 4.0.4
