--- a/travis.cfg
+++ b/travis.cfg
@@ -1,2 +1,15 @@
 [buildout]
-extends = buildout.cfg
+develop = .
+parts =
+    test
+versions = versions
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = plone.recipe.codeanalysis [tests]
+
+[versions]
+distribute = 0.6.49
+zc.buildout = 1.7.1
+zc.recipe.egg = 1.3.2
+zope.testrunner = 4.0.4
