--- a/travis.cfg
+++ b/travis.cfg
@@ -1,8 +1,8 @@
 [buildout]
-develop = .
-parts =
-    test
+extensions = mr.developer
+parts = test
 versions = versions
+auto-checkout = plone.recipe.codeanalysis
 
 [test]
 recipe = zc.recipe.testrunner
@@ -13,3 +13,6 @@ distribute = 0.6.49
 zc.buildout = 1.7.1
 zc.recipe.egg = 1.3.2
 zope.testrunner = 4.0.4
+
+[sources]
+plone.recipe.codeanalysis = fs .
