JSHint and CSSLint added.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,6 +18,7 @@ flake8-ignore = E226,E302,E41
 flake8-exclude = bootstrap.py
 flake8-max-line-length = 160
 jshint = True
+csslint = True
 
 [versions]
 distribute = 0.6.49
