--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,7 +7,9 @@ versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = plone.recipe.codeanalysis [tests]
+eggs =
+    plone.recipe.codeanalysis [tests]
+    flake8
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
