Another attempt to fix the travis issue.

--- a/travis.cfg
+++ b/travis.cfg
@@ -5,7 +5,9 @@ versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = plone.recipe.codeanalysis [tests]
+eggs =
+    plone.recipe.codeanalysis [tests]
+    flake8
 
 [versions]
 distribute = 0.6.49
