--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,9 +7,7 @@ versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
-eggs =
-    plone.recipe.codeanalysis [tests]
-    flake8
+eggs = plone.recipe.codeanalysis [tests]
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
