--- a/travis.cfg
+++ b/travis.cfg
@@ -1,7 +1,8 @@
 [buildout]
 develop = .
 parts = test
-find-links = http://pypi.python.org/simple
+eggs-directory = buildout-cache/eggs
+download-cache = buildout-cache/downloads
 versions = versions
 
 [test]
