Remove download-cache.

--- a/travis.cfg
+++ b/travis.cfg
@@ -1,15 +1,13 @@
 [buildout]
 develop = .
 parts = test
-eggs-directory = buildout-cache/eggs
-download-cache = buildout-cache/downloads
+allow-hosts = *.python.org
 versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
 eggs =
     plone.recipe.codeanalysis [tests]
-    flake8
 
 [versions]
 distribute = 0.6.49
