Add flake8 manually.

--- a/travis.cfg
+++ b/travis.cfg
@@ -1,8 +1,12 @@
 [buildout]
 develop = .
-parts = test
+parts = flake8 test
 allow-hosts = *.python.org
 versions = versions
+
+[flake8]
+recipe = zc.recipe.egg
+eggs = flake8 
 
 [test]
 recipe = zc.recipe.testrunner
