--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python: "2.7"
 install:
-  - python bootstrap.py -c travis.cfg
-  - bin/buildout -N -t 3 -c travis.cfg
+  - python bootstrap.py
+  - bin/buildout -N -t 3
 script: bin/test
