--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,7 +7,7 @@ versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = plone.recipe.codeanalysis [tests]
+eggs = plone.recipe.codeanalysis
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
