Revert "Remove [tests]."
This reverts commit 54a0837ae22f6279f93ddecf019eb0198377b849.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,7 +7,7 @@ versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = plone.recipe.codeanalysis
+eggs = plone.recipe.codeanalysis [tests]
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
