set test defaults

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,7 @@ versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
+defaults = ['--auto-color', '--auto-progress']
 eggs = plone.recipe.codeanalysis [tests]
 
 [code-analysis]
