Add a code analysis tool for checking imports
According to plone.api style guide import should be done
one per line:
http://ploneapi.readthedocs.org/en/1.0.0-rc.1/contribute/conventions.html

This code analysis tool is a basic validator for that.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,6 +26,7 @@ utf8-header = True
 clean-lines = True
 prefer-single-quotes = True
 string-formatting = True
+imports = True
 
 [versions]
 distribute = 0.6.49
