--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,6 +23,7 @@ csslint = True
 zptlint = True
 deprecated-methods = True
 utf8-header = True
+clean-lines = True
 
 [versions]
 distribute = 0.6.49
