Check for old style python string formatting

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,6 +25,7 @@ deprecated-methods = True
 utf8-header = True
 clean-lines = True
 prefer-single-quotes = True
+string-formatting = True
 
 [versions]
 distribute = 0.6.49
