--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,6 +24,7 @@ zptlint = True
 deprecated-methods = True
 utf8-header = True
 clean-lines = True
+prefer-single-quotes = True
 
 [versions]
 distribute = 0.6.49
