Add missing zptlint option
On merging deprecated-methods branch the option got lost.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,6 +20,7 @@ flake8-exclude = bootstrap.py
 flake8-max-line-length = 160
 jshint = True
 csslint = True
+zptlint = True
 deprecated-methods = True
 
 [versions]
