New validator: check for debug-like statements
Scan python files and look for debug-like statements like
print or pdbs.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -27,6 +27,7 @@ clean-lines = True
 prefer-single-quotes = True
 string-formatting = True
 imports = True
+debug-statements = True
 
 [versions]
 distribute = 0.6.49
