--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,6 +30,7 @@ imports = True
 debug-statements = True
 
 [versions]
+setuptools = 0.6c11
 distribute = 0.6.49
 zc.buildout = 1.7.1
 zc.recipe.egg = 1.3.2
