--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,8 @@ parts =
     test
     scripts
     code-analysis
+    zptlint
+    i18ndude
 versions = versions
 
 [test]
@@ -34,6 +36,16 @@ string-formatting = True
 imports = True
 debug-statements = True
 jenkins = True
+find-untranslated = True
+i18ndude-bin = ${buildout:directory}/bin/i18ndude
+
+[zptlint]
+recipe = zc.recipe.egg
+eggs = zptlint
+
+[i18ndude]
+recipe = zc.recipe.egg
+eggs = i18ndude
 
 [versions]
 setuptools = 0.9.8
