Add zptlint part
This ensures that zptlint is always available.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,7 @@ develop = .
 parts =
     test
     code-analysis
+    zptlint
 versions = versions
 
 [test]
@@ -28,6 +29,10 @@ prefer-single-quotes = True
 string-formatting = True
 imports = True
 debug-statements = True
+
+[zptlint]
+recipe = zc.recipe.egg
+eggs = zptlint
 
 [versions]
 setuptools = 0.6c11
