--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,7 @@ eggs = plone.recipe.codeanalysis [tests]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/plone/recipe/codeanalysis
 pre-commit-hook = True
-flake8-complexity = 10
+flake8-max-complexity = 10
 flake8-ignore = E226,E302,E41
 flake8-exclude = bootstrap.py
 flake8-max-line-length = 160
