Add zest.releaser to buildout.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 develop = .
 parts =
     test
+    scripts
     code-analysis
 versions = versions
 
@@ -9,6 +10,10 @@ versions = versions
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress']
 eggs = plone.recipe.codeanalysis [tests]
+
+[scripts]
+recipe = zc.recipe.egg
+eggs = zest.releaser
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
