--- a/buildout.cfg
+++ b/buildout.cfg
@@ -35,7 +35,7 @@ imports = True
 debug-statements = True
 
 [versions]
-setuptools = 0.6c11
+setuptools = 0.9.8
 distribute = 0.6.49
 zc.buildout = 1.7.1
 zc.recipe.egg = 1.3.2
