Rename parts/p.r.codeanalysis into parts/code-analysis. Add jenkins param and jenkins-code-analysis script.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,6 +33,7 @@ prefer-single-quotes = True
 string-formatting = True
 imports = True
 debug-statements = True
+jenkins = True
 
 [versions]
 setuptools = 0.9.8
