Remove flake8 section from travis.cfg.

--- a/travis.cfg
+++ b/travis.cfg
@@ -1,12 +1,8 @@
 [buildout]
 develop = .
-parts = flake8 test
+parts = test
 allow-hosts = *.python.org
 versions = versions
-
-[flake8]
-recipe = zc.recipe.egg
-eggs = flake8
 
 [test]
 recipe = zc.recipe.testrunner
