Add return-status-codes option.

--- a/travis.cfg
+++ b/travis.cfg
@@ -1,8 +1,13 @@
 [buildout]
 develop = .
-parts = test
+parts = code-analysis test
 allow-hosts = *.python.org
 versions = versions
+
+[code-analysis]
+recipe = plone.recipe.codeanalysis
+directory = ${buildout:directory}/plone/recipe/codeanalysis
+return-status-codes = 1
 
 [test]
 recipe = zc.recipe.testrunner
