--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: python
 python: "2.7"
 install:
   - python bootstrap.py -v 1.7.1
-  - bin/buildout -N -t 3
+  - bin/buildout -N -t 3 -c travis.cfg
 script: bin/test
