--- a/travis.cfg
+++ b/travis.cfg
@@ -1,21 +1,8 @@
 [buildout]
-develop = .
-parts = code-analysis test
-allow-hosts = *.python.org
-versions = versions
+extends = buildout.cfg
+parts = code-analysis
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/plone/recipe/codeanalysis
 return-status-codes = 1
-
-[test]
-recipe = zc.recipe.testrunner
-eggs =
-    plone.recipe.codeanalysis [tests]
-
-[versions]
-distribute = 0.6.49
-zc.buildout = 1.7.1
-zc.recipe.egg = 1.3.2
-zope.testrunner = 4.0.4
