--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ python: "2.7"
 install:
   - python bootstrap.py -v 1.7.1
   - bin/buildout -N -t 3 -c travis.cfg
-script: bin/test
+script:
+    bin/test
+    bin/code-analysis
