Extend the parts.

--- a/travis.cfg
+++ b/travis.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends = buildout.cfg
-parts = code-analysis
+parts += code-analysis
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
