--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ install:
   - python bootstrap.py -v 1.7.1
   - bin/buildout -N -t 3 -c travis.cfg
 script:
-    bin/test
-    bin/code-analysis
+  - bin/test
+  - bin/code-analysis
