Just run flake8 on p.a.codeanalysis.

--- a/travis.cfg
+++ b/travis.cfg
@@ -5,4 +5,7 @@ parts += code-analysis
 [code-analysis]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/plone/recipe/codeanalysis
+jshint = False
+csslint = False
+zptlint = False
 return-status-codes = 1
