Remove more code-analysis options from travis build.

--- a/travis.cfg
+++ b/travis.cfg
@@ -8,4 +8,11 @@ directory = ${buildout:directory}/plone/recipe/codeanalysis
 jshint = False
 csslint = False
 zptlint = False
+deprecated-methods = False
+utf8-header = False
+clean-lines = False
+prefer-single-quotes = False
+string-formatting = False
+imports = False
+debug-statements = False
 return-status-codes = 1
