Set flake8-max-complexity to 20.

--- a/travis.cfg
+++ b/travis.cfg
@@ -5,6 +5,7 @@ parts += code-analysis
 [code-analysis]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/plone/recipe/codeanalysis
+flake8-max-complexity = 20
 jshint = False
 csslint = False
 zptlint = False
