gh-19 Rename deprecated-methods to deprecated-alias

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,7 +26,7 @@ flake8-max-line-length = 160
 jshint = True
 csslint = True
 zptlint = True
-deprecated-methods = True
+deprecated-alias = True
 utf8-header = True
 clean-lines = True
 prefer-single-quotes = True
