--- a/travis.cfg
+++ b/travis.cfg
@@ -9,7 +9,7 @@ flake8-max-complexity = 20
 jshint = False
 csslint = False
 zptlint = False
-deprecated-methods = False
+deprecated-alias = False
 utf8-header = False
 clean-lines = False
 prefer-single-quotes = False
