--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python: "2.7"
 install:
-  - python bootstrap.py
+  - python bootstrap.py -v 1.7.1
   - bin/buildout -N -t 3 -c travis.cfg
 script:
   - bin/test
