--- a/buildout.cfg
+++ b/buildout.cfg
@@ -48,5 +48,9 @@ recipe = zc.recipe.egg
 eggs = i18ndude
 
 [versions]
-setuptools = 1.1.6
-zc.buildout = 2.2.1
+setuptools = 0.9.8
+distribute = 0.6.49
+zc.buildout = 1.7.1
+zc.recipe.egg = 1.3.2
+zope.testrunner = 4.0.4
+transaction = 1.2.0
