Take a taste of our own medicine

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,10 +21,7 @@ eggs = zest.releaser
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/plone/recipe/codeanalysis
 pre-commit-hook = True
-flake8-max-complexity = 10
-flake8-ignore = E226,E302,E41
-flake8-exclude = bootstrap.py
-flake8-max-line-length = 160
+flake8-max-complexity = 12
 jshint = True
 csslint = True
 zptlint = True
@@ -35,7 +32,7 @@ prefer-single-quotes = True
 string-formatting = True
 imports = True
 debug-statements = True
-jenkins = True
+return-status-codes = True
 find-untranslated = True
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
 
