--- a/travis.cfg
+++ b/travis.cfg
@@ -1,19 +1,5 @@
 [buildout]
 extends = buildout.cfg
-parts += code-analysis
 
 [code-analysis]
-recipe = plone.recipe.codeanalysis
-directory = ${buildout:directory}/plone/recipe/codeanalysis
-flake8-max-complexity = 20
-jshint = False
-csslint = False
-zptlint = False
-deprecated-alias = False
-utf8-header = False
-clean-lines = False
-prefer-single-quotes = False
-string-formatting = False
-imports = False
-debug-statements = False
-return-status-codes = 1
+pre-commit-hook = False
