Fix coverage generation on CI

--- a/travis.cfg
+++ b/travis.cfg
@@ -1,5 +1,10 @@
 [buildout]
 extends = buildout.cfg
+parts += createcoverage
 
 [code-analysis]
 pre-commit-hook = False
+
+[createcoverage]
+recipe = zc.recipe.egg
+eggs = createcoverage
