Rename 'deprecated-alias' to 'deprecated-aliases' and keep backward compatibility with previous options (refs. #19)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,7 +22,7 @@ pre-commit-hook = True
 clean-lines = True
 csslint = True
 debug-statements = True
-deprecated-alias = True
+deprecated-aliases = True
 find-untranslated = True
 flake8-max-complexity = 12
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
