--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,9 +28,9 @@ flake8-max-complexity = 12
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
 imports = True
 jshint = True
+pep3101 = True
 prefer-single-quotes = True
 return-status-codes = True
-string-formatting = True
 utf8-header = True
 zptlint = True
 
