Remove warning about debug-statements option

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,7 +21,7 @@ directory = ${buildout:directory}/plone/recipe/codeanalysis
 pre-commit-hook = True
 clean-lines = True
 csslint = True
-debug-statements = False
+debug-statements = True
 deprecated-aliases = True
 find-untranslated = True
 flake8-max-complexity = 12
