Remove progress bullets from flake8 check.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,7 +30,7 @@ imports = True
 jshint = False
 pep3101 = False
 prefer-single-quotes = True
-return-status-codes = True
+return-status-codes = False
 utf8-header = True
 zptlint = True
 
