--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,7 @@ parts =
     test
     scripts
     code-analysis
+extends = http://dist.plone.org/release/4.3/versions.cfg
 versions = versions
 
 [test]
@@ -35,9 +36,6 @@ utf8-header = True
 zptlint = True
 
 [versions]
-setuptools = 0.9.8
-distribute = 0.6.49
-zc.buildout = 1.7.1
-zc.recipe.egg = 1.3.2
-zope.testrunner = 4.0.4
-transaction = 1.2.0
+setuptools = 1.1.6
+zc.buildout = 2.2.1
+zc.recipe.egg = 2.0.1
