--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@ parts =
     test
     scripts
     code-analysis
-extends = http://dist.plone.org/release/4.3/versions.cfg
+extends = http://download.zope.org/zopetoolkit/index/1.1/ztk-versions.cfg
 versions = versions
 
 [test]
@@ -36,6 +36,8 @@ utf8-header = True
 zptlint = True
 
 [versions]
-setuptools = 1.1.6
-zc.buildout = 2.2.1
-zc.recipe.egg = 2.0.1
+#setuptools = 1.1.6
+#zc.buildout = 2.2.1
+#zc.recipe.egg = 2.0.1
+
+zope.interface = 3.6.1
