--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 language: python
 python: 2.7
 install:
-  - mkdir -p buildout-cache/eggs
-  - mkdir -p buildout-cache/downloads
-  - pip install -U setuptools==1.1.6
-  - pip uninstall -y distribute
-  - python bootstrap.py -c travis.cfg
+  - python bootstrap.py -v 1.7.1
   - bin/buildout -N -t 3 -c travis.cfg
 script:
   - bin/test
