--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,6 @@ parts =
     test
     scripts
     code-analysis
-extends = http://download.zope.org/zopetoolkit/index/1.1/ztk-versions.cfg
 versions = versions
 
 [test]
@@ -36,8 +35,9 @@ utf8-header = True
 zptlint = True
 
 [versions]
-#setuptools = 1.1.6
-#zc.buildout = 2.2.1
-#zc.recipe.egg = 2.0.1
-
-zope.interface = 3.6.1
+setuptools = 0.9.8
+distribute = 0.6.49
+zc.buildout = 1.7.1
+zc.recipe.egg = 1.3.2
+zope.testrunner = 4.0.4
+transaction = 1.2.0
