--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,13 @@ install:
   - python bootstrap.py -v 1.7.1
   - bin/buildout -N -t 3 -c travis.cfg
 script:
-  - bin/test
   - bin/code-analysis
+  - bin/test
 after_success:
   - bin/createcoverage run bin/test
   - pip install -q coveralls
   - coveralls
 after_failure:
   - bin/buildout annotate -c travis.cfg
+  - bin/csslint --version
+  - bin/jshint --version
