Add 'node' part definition missing in previous commit

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,11 @@ parts =
     code-analysis
 versions = versions
 
+[node]
+recipe = gp.recipe.node
+npms = csslint jshint
+scripts = csslint jshint
+
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress']
