--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,7 +15,7 @@ scripts = csslint jshint
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress']
-eggs = plone.recipe.codeanalysis [tests]
+eggs = plone.recipe.codeanalysis [test]
 
 [scripts]
 recipe = zc.recipe.egg
