Remove i18ndude and zptlint as package dependencies
This will also minimize Zope/Plone dependencies.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ install:
 script:
   - bin/code-analysis
   - bin/test
+  - pip install i18ndude
+  - pip install zptlint
+  - bin/test
 after_success:
   - bin/createcoverage run bin/test
   - pip install -q coveralls
