--- a/buildout.cfg
+++ b/buildout.cfg
@@ -29,16 +29,18 @@ clean-lines = True
 csslint = False
 debug-statements = False
 deprecated-aliases = True
-find-untranslated = True
 flake8-max-complexity = 12
-i18ndude-bin = ${buildout:directory}/bin/i18ndude
 imports = True
 jshint = False
 pep3101 = False
 prefer-single-quotes = True
 return-status-codes = False
 utf8-header = True
+# this options only take efect if the dependencies are installed
+find-untranslated = True
+i18ndude-bin = ${buildout:directory}/bin/i18ndude
 zptlint = True
+zptlint-bin = ${buildout:directory}/bin/zptlint
 
 [versions]
 setuptools = 0.9.8
