Add JSCS support

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,8 +9,8 @@ versions = versions
 
 [node]
 recipe = gp.recipe.node
-npms = csslint jshint
-scripts = csslint jshint
+npms = csslint jshint jscs
+scripts = csslint jshint jscs
 
 [test]
 recipe = zc.recipe.testrunner
