Add check-manifest and restructuredtext_lint to buildout for evaluation.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,6 +20,8 @@ eggs = plone.recipe.codeanalysis [test]
 [scripts]
 recipe = zc.recipe.egg
 eggs = zest.releaser
+    restructuredtext_lint
+    check-manifest
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
