--- a/travis.cfg
+++ b/travis.cfg
@@ -4,6 +4,7 @@ parts += createcoverage
 
 [code-analysis]
 pre-commit-hook = False
+return-status-codes = True
 
 [createcoverage]
 recipe = zc.recipe.egg
