--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,7 @@ parts =
     test
     scripts
     code-analysis
+    releaser
 versions = versions
 
 [node]
@@ -43,6 +44,12 @@ find-untranslated = True
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
 zptlint = True
 zptlint-bin = ${buildout:directory}/bin/zptlint
+
+[releaser]
+recipe = zc.recipe.egg
+eggs =
+    zc.rst2
+    zest.releaser
 
 [versions]
 setuptools = 0.9.8
