--- a/buildout.cfg
+++ b/buildout.cfg
@@ -39,6 +39,7 @@ pep3101 = False
 prefer-single-quotes = True
 return-status-codes = False
 utf8-header = True
+hasattr = True
 # this options only take efect if the dependencies are installed
 find-untranslated = True
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
