Use z3c.dependencychecker and clean up dependencies (closes #96)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,12 +1,17 @@
 [buildout]
 develop = .
 parts =
+    dependencychecker
     node
     test
     scripts
     code-analysis
     releaser
 versions = versions
+
+[dependencychecker]
+recipe = zc.recipe.egg
+eggs = z3c.dependencychecker
 
 [node]
 recipe = gp.recipe.node
