Fix tests to pass on Python 3
Fix tests to pass on Python 3

Drop Python 2.6

Restore tests to pass on Python 2.7

Fix missing iteritems on Python 3

Sort imports

Drop Python 3.3

Fix hasattr

Refactor to convert bytes to strings only in utils

Fix i18ndude script location

Fix i18ndude script location

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -40,6 +40,7 @@ deprecated-aliases = True
 flake8-max-complexity = 12
 imports = True
 jshint = False
+jshint-bin = ${buildout:directory}/bin/jshint
 pep3101 = False
 prefer-single-quotes = True
 return-status-codes = False
@@ -58,9 +59,9 @@ eggs =
     zest.releaser
 
 [versions]
-setuptools = 0.9.8
-distribute = 0.6.49
-zc.buildout = 1.7.1
-zc.recipe.egg = 1.3.2
+setuptools =
+distribute =
+zc.buildout =
+zc.recipe.egg =
 zope.testrunner = 4.0.4
 transaction = 1.2.0
