--- a/travis.cfg
+++ b/travis.cfg
@@ -1,6 +1,10 @@
 [buildout]
 extends = buildout.cfg
-parts += createcoverage
+parts =
+    node
+    test
+    code-analysis
+    createcoverage
 
 [code-analysis]
 pre-commit-hook = False
