Allow Python 3.4 with extras to fail at Travis
Allow Python 3.4 with extras to fail at Travis

Allow Python 3.4 with extras to fail at Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ env:
   matrix:
     - CONF=travis.cfg
     - CONF=extras.cfg EXTRAS_INSTALLED=true
+matrix:
+  allow_failures:
+    - python: 3.4
+      env: CONF=extras.cfg EXTRAS_INSTALLED=true
 install:
   - python bootstrap.py
   - bin/buildout -c $CONF annotate
