--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
   - 2.7
   - 3.4
+sudo: false
+cache:
+  directories:
+    - eggs
 env:
   matrix:
     - CONF=travis.cfg
