Use bootstrap-buildout.py. Pin setuptools to 8.3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
     - python: 3.4
       env: CONF=extras.cfg EXTRAS_INSTALLED=true
 install:
-  - python bootstrap.py
+  - python bootstrap-buildout.py --setuptools-version=8.3
   - bin/buildout -c $CONF annotate
   - bin/buildout -N -t 3 -c $CONF
 script:
