--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,8 +15,8 @@ eggs = z3c.dependencychecker
 
 [node]
 recipe = gp.recipe.node
-npms = csslint jshint jscs
-scripts = csslint jshint jscs
+npms = csslint jshint jscs tslint
+scripts = csslint jshint jscs tslint
 
 [test]
 recipe = zc.recipe.testrunner
