Add tests for deprecated_aliases

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -37,6 +37,7 @@ clean-lines = True
 csslint = False
 debug-statements = False
 deprecated-aliases = True
+deprecated-aliases-exclude = ${:directory}/tests/test_deprecated_aliases.py
 flake8-max-complexity = 12
 imports = True
 jshint = False
