Add flake8-extensions option to allow flake8 plugin usage.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -39,6 +39,12 @@ debug-statements = False
 deprecated-aliases = True
 deprecated-aliases-exclude = ${:directory}/tests/test_deprecated_aliases.py
 flake8-max-complexity = 12
+flake8-extensions =
+    flake8-blind-except
+    flake8-coding
+    flake8-debugger
+    flake8-quotes
+    pep8-naming
 imports = True
 jshint = False
 jshint-bin = ${buildout:directory}/bin/jshint
