--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,6 +33,7 @@ eggs = zest.releaser
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/plone/recipe/codeanalysis
 pre-commit-hook = True
+check-manifest = True
 clean-lines = True
 csslint = False
 debug-statements = False
