--- a/travis.cfg
+++ b/travis.cfg
@@ -6,9 +6,16 @@ parts =
     code-analysis
     createcoverage
 
+# caches, see also .travis.yaml
+# one should not depend on '/home/travis' but it seems stable in containers.
+eggs-directory = /home/travis/buildout-cache/eggs
+download-cache = /home/travis/buildout-cache/downloads
+
+
 [code-analysis]
 pre-commit-hook = False
 return-status-codes = True
+
 
 [createcoverage]
 recipe = zc.recipe.egg
