Make sure coverage ignores the correct files even on travis.

--- a/.coveragerc
+++ b/.coveragerc
@@ -2,8 +2,8 @@
 omit =
     **/.buildout/eggs/*
     **/lib/python*
-    /usr/*
-    bin/test
-    buildout-cache/eggs/*
-    eggs/*
-    parts/*
+    **/usr/*
+    **/bin/test
+    **/buildout-cache/eggs/*
+    **/eggs/*
+    **/parts/*
