--- a/buildout.cfg
+++ b/buildout.cfg
@@ -41,6 +41,7 @@ flake8-extensions =
     flake8-blind-except
     flake8-coding
     flake8-debugger
+    flake8-isort
     flake8-quotes
     pep8-naming
 imports = True
