--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,7 +25,7 @@ eggs = plone.recipe.codeanalysis [test]
 
 [scripts]
 recipe = zc.recipe.egg
-eggs = zest.releaser
+eggs = zest.releaser[recommended]
     restructuredtext_lint
     check-manifest
 
