--- a/buildout.cfg
+++ b/buildout.cfg
@@ -47,7 +47,7 @@ flake8-extensions =
 jshint = False
 jshint-bin = ${buildout:directory}/bin/jshint
 return-status-codes = False
-# this options only take efect if the dependencies are installed
+# those options only take effect if the dependencies are installed
 find-untranslated = True
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
 zptlint = True
