Add a zest.releaser entry point
It shows bin/code-analysis output on zest.releaser's prerelease stage.

Fixes https://github.com/plone/plone.recipe.codeanalysis/issues/154

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -58,6 +58,7 @@ zptlint-bin = ${buildout:directory}/bin/zptlint
 [releaser]
 recipe = zc.recipe.egg
 eggs =
+    plone.recipe.codeanalysis [recommended]
     zc.rst2
     zest.releaser
 
