--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,8 @@ parts =
     releaser
 versions = versions
 
+allow-picked-versions = false
+
 [dependencychecker]
 recipe = zc.recipe.egg
 eggs = z3c.dependencychecker
@@ -60,10 +62,72 @@ eggs =
     zest.releaser
 
 [versions]
-setuptools =
-distribute =
-zc.buildout =
-zc.recipe.egg =
-zope.testrunner = 4.0.4
-transaction = 1.2.0
+bleach = 1.4.2
+chardet = 2.3.0
+check-manifest = 0.27
+colorama = 0.3.3
+coverage = 4.0.2
+createcoverage = 1.4
+docutils = 0.12
+flake8 = 2.5.0
+flake8-blind-except = 0.1.0
+flake8-coding = 1.1.1
+flake8-debugger = 1.4.0
+flake8-isort = 0.2
+flake8-quotes = 0.1.1
+gp.recipe.node = 0.12.7.1
+html5lib = 0.9999999
+i18ndude = 3.4.5
 isort = 4.2.0
+manuel = 1.8.0
+mccabe = 0.3.1
+ordereddict = 1.1
+pep8 = 1.5.7
+pep8-naming = 0.3.3
+pkginfo = 1.2.1
+plone.i18n = 3.0.2
+pyflakes = 1.0.0
+Pygments = 2.0.2
+pyroma = 1.8.3
+python-archive = 0.2
+pytz = 2015.7
+readme = 0.6.0
+requests = 2.8.1
+requests-toolbelt = 0.4.0
+restructuredtext-lint = 0.12.2
+setuptools = 18.5
+six = 1.10.0
+testfixtures = 4.4.0
+transaction = 1.2.0
+twine = 1.6.4
+Unidecode = 0.4.18
+wheel = 0.26.0
+z3c.dependencychecker = 1.15
+zc.buildout = 2.4.7
+zc.recipe.cmmi = 1.3.6
+zc.recipe.egg = 2.0.3
+zc.recipe.testrunner = 2.0.0
+zc.rst2 = 0.2
+zest.releaser = 6.2
+zope.browser = 2.1.0
+zope.component = 4.2.2
+zope.configuration = 4.0.3
+zope.contentprovider = 4.0.0
+zope.contenttype = 4.1.0
+zope.event = 4.1.0
+zope.exceptions = 4.0.8
+zope.i18n = 4.1.0
+zope.i18nmessageid = 4.0.3
+zope.interface = 4.1.3
+zope.location = 4.0.3
+zope.pagetemplate = 4.2.1
+zope.proxy = 4.1.6
+zope.publisher = 4.2.1
+zope.schema = 4.4.2
+zope.security = 4.0.3
+zope.tal = 4.1.1
+zope.tales = 4.1.1
+zope.testing = 4.5.0
+zope.testrunner = 4.0.4
+zope.traversing = 4.0.0
+zptlint = 0.2.4
