Fix coveralls integration
Recently coveralls.io updated its platform and requires coverage.py 3.6.

Update the version pins and also .travis.yml to make it work again.

Thanks for @ebrehault for the tips:
https://community.plone.org/t/createcoverage-coveralls-io-version-conflicts/1188

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
   - bin/test
 after_success:
   - bin/createcoverage run bin/test
-  - pip install -q coveralls
+  - pip install coverage==3.7 coveralls
   - coveralls
 after_failure:
   - bin/flake8 --version
