More version pins

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -73,8 +73,15 @@ flake8 = 2.5.0
 flake8-blind-except = 0.1.0
 flake8-coding = 1.1.1
 flake8-debugger = 1.4.0
+flake8-deprecated = 1.0
 flake8-isort = 0.2
+flake8-pep3101 = 0.3
+flake8-plone-api = 1.0
+flake8-plone-hasattr = 0.1
+flake8-print = 2.0.2
 flake8-quotes = 0.1.1
+flake8-string-format = 0.2.1
+flake8-todo = 0.4
 gp.recipe.node = 0.12.7.1
 html5lib = 0.9999999
 i18ndude = 3.4.5
@@ -92,6 +99,7 @@ pyroma = 1.8.3
 python-archive = 0.2
 pytz = 2015.7
 readme = 0.6.0
+readme-renderer = 0.7.0
 requests = 2.8.1
 requests-toolbelt = 0.4.0
 restructuredtext-lint = 0.12.2
@@ -108,7 +116,7 @@ zc.recipe.cmmi = 1.3.6
 zc.recipe.egg = 2.0.3
 zc.recipe.testrunner = 2.0.0
 zc.rst2 = 0.2
-zest.releaser = 6.2
+zest.releaser = 6.6.4
 zope.browser = 2.1.0
 zope.component = 4.2.2
 zope.configuration = 4.0.3
