Add `from_first = True` to comply with Plone conventions
Refs. https://github.com/timothycrosley/isort/issues/409

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,6 +1,7 @@
 [settings]
 force_alphabetical_sort = True
 force_single_line = True
-lines_after_imports = 2
+from_first = True
 line_length = 200
+lines_after_imports = 2
 not_skip = __init__.py
