--- a/buildout.cfg
+++ b/buildout.cfg
@@ -62,6 +62,10 @@ eggs =
     zest.releaser
 
 [versions]
+# keep them in sync with requirements.txt
+setuptools = 33.1.1
+zc.buildout = 2.8.0
+
 bleach = 1.4.2
 chardet = 2.3.0
 check-manifest = 0.27
@@ -103,7 +107,6 @@ readme-renderer = 0.7.0
 requests = 2.8.1
 requests-toolbelt = 0.4.0
 restructuredtext-lint = 0.12.2
-setuptools = 18.5
 six = 1.10.0
 testfixtures = 4.4.0
 transaction = 1.2.0
@@ -111,7 +114,6 @@ twine = 1.6.4
 Unidecode = 0.4.18
 wheel = 0.26.0
 z3c.dependencychecker = 1.15
-zc.buildout = 2.5.0
 zc.recipe.cmmi = 1.3.6
 zc.recipe.egg = 2.0.3
 zc.recipe.testrunner = 2.0.0
