--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
   - bin/code-analysis
   - bin/test
 after_success:
-  - bin/createcoverage run bin/test
+  - bin/createcoverage -d htmlcov
   - coveralls
 after_failure:
   - bin/flake8 --version
