--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
   directories:
     - $HOME/buildout-cache
     - $HOME/parts/node
+    - $HOME/.cache/pip
 env:
   matrix:
     - CONF=travis.cfg
