--- a/buildout.cfg
+++ b/buildout.cfg
@@ -63,8 +63,8 @@ eggs =
 
 [versions]
 # keep them in sync with requirements.txt
-setuptools = 33.1.1
-zc.buildout = 2.8.0
+setuptools = 38.2.4
+zc.buildout = 2.10.0
 
 bleach = 1.4.2
 chardet = 2.3.0
@@ -114,6 +114,7 @@ twine = 1.6.4
 Unidecode = 0.4.18
 wheel = 0.26.0
 z3c.dependencychecker = 1.15
+zdaemon = 4.2.0
 zc.recipe.cmmi = 1.3.6
 zc.recipe.egg = 2.0.3
 zc.recipe.testrunner = 2.0.0
@@ -141,3 +142,7 @@ zope.testing = 4.5.0
 zope.testrunner = 4.0.4
 zope.traversing = 4.0.0
 zptlint = 0.2.4
+zc.recipe.deployment = 1.3.0
+zc.zdaemonrecipe = 1.0.0
+WebOb = 1.7.4
+ZConfig = 3.2.0
