Remove download badge from readme. Fix release deps. Update requirements.txt.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -62,10 +62,16 @@ eggs =
     zest.releaser
 
 [versions]
-# keep them in sync with requirements.txt
-setuptools = 38.2.4
-zc.buildout = 2.10.0
+# requirements.txt
+setuptools =
+zc.buildout =
 
+# Release
+zest.releaser = 6.12.4
+twine = 1.9.1
+requests = 2.18.4
+
+# misc
 bleach = 1.4.2
 chardet = 2.3.0
 check-manifest = 0.27
