Revert "Remove download badge from readme. Fix release deps. Update requirements.txt."
This reverts commit dde97599f33f20206819fbe114637d34233dd755.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -62,16 +62,10 @@ eggs =
     zest.releaser
 
 [versions]
-# requirements.txt
-setuptools =
-zc.buildout =
+# keep them in sync with requirements.txt
+setuptools = 38.2.4
+zc.buildout = 2.10.0
 
-# Release
-zest.releaser = 6.12.4
-twine = 1.9.1
-requests = 2.18.4
-
-# misc
 bleach = 1.4.2
 chardet = 2.3.0
 check-manifest = 0.27
