--- a/buildout.cfg
+++ b/buildout.cfg
@@ -66,8 +66,16 @@ eggs =
 setuptools = 38.2.4
 zc.buildout = 2.10.0
 
+# release
+zest.releaser = 6.12.4
+twine = 1.9.1
+requests = 2.18.4
+requests-toolbelt = 0.8.0
+tqdm = 4.19.5
+
+# misc
 bleach = 1.4.2
-chardet = 2.3.0
+chardet = 3.0.2
 check-manifest = 0.27
 colorama = 0.3.3
 coverage = 3.7
@@ -104,13 +112,10 @@ python-archive = 0.2
 pytz = 2015.7
 readme = 0.6.0
 readme-renderer = 0.7.0
-requests = 2.8.1
-requests-toolbelt = 0.4.0
 restructuredtext-lint = 0.12.2
 six = 1.10.0
 testfixtures = 4.4.0
 transaction = 1.2.0
-twine = 1.6.4
 Unidecode = 0.4.18
 wheel = 0.26.0
 z3c.dependencychecker = 1.15
@@ -119,7 +124,6 @@ zc.recipe.cmmi = 1.3.6
 zc.recipe.egg = 2.0.3
 zc.recipe.testrunner = 2.0.0
 zc.rst2 = 0.2
-zest.releaser = 6.6.4
 zope.browser = 2.1.0
 zope.component = 4.2.2
 zope.configuration = 4.0.3
