Add XMLLint tests and documentation, and fix that linter

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -52,6 +52,7 @@ return-status-codes = False
 # those options only take effect if the dependencies are installed
 find-untranslated = True
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
+xmllint = True
 zptlint = True
 zptlint-bin = ${buildout:directory}/bin/zptlint
 
