--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,7 @@ develop = .
 parts =
     dependencychecker
     node
+    rubygems
     test
     scripts
     code-analysis
@@ -19,6 +20,10 @@ eggs = z3c.dependencychecker
 recipe = gp.recipe.node
 npms = csslint jshint jscs
 scripts = csslint jshint jscs
+
+[rubygems]
+recipe = rubygemsrecipe
+gems = bundler scss_lint
 
 [test]
 recipe = zc.recipe.testrunner
@@ -52,6 +57,8 @@ return-status-codes = False
 # those options only take effect if the dependencies are installed
 find-untranslated = True
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
+scsslint = True
+scsslint-bin = ${buildout:directory}/bin/scss_lint
 xmllint = True
 zptlint = True
 zptlint-bin = ${buildout:directory}/bin/zptlint
@@ -96,6 +103,7 @@ flake8-quotes = 0.1.1
 flake8-string-format = 0.2.1
 flake8-todo = 0.4
 gp.recipe.node = 0.12.7.1
+hexagonit.recipe.download = 1.7.1
 html5lib = 0.9999999
 i18ndude = 3.4.5
 isort = 4.2.0
@@ -115,6 +123,7 @@ pytz = 2015.7
 readme = 0.6.0
 readme-renderer = 0.7.0
 restructuredtext-lint = 0.12.2
+rubygemsrecipe = 0.2.2
 six = 1.10.0
 testfixtures = 4.4.0
 transaction = 1.2.0
