--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ install:
   - easy_install -U zc.buildout==2.10.0
   - buildout -c $CONF annotate
   - buildout -N -t 3 -c $CONF
+  - gem install scss_lint --user-install
 script:
   - bin/code-analysis
   - bin/test
