--- a/travis.cfg
+++ b/travis.cfg
@@ -15,7 +15,7 @@ download-cache = /home/travis/buildout-cache/downloads
 [code-analysis]
 pre-commit-hook = False
 return-status-codes = True
-
+scsslint-bin = /usr/local/bin/scss-lint
 
 [createcoverage]
 recipe = zc.recipe.egg
