Ever more desperate travis hacking

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
     - python: 3.6
       env: CONF=extras.cfg EXTRAS_INSTALLED=true
 install:
-  - sudo gem install scss-lint
+  - sudo gem install scss-lint && ln -s `which scss-lint` bin/
   - pip install -r requirements.txt
   - easy_install -U zc.buildout==2.10.0
   - buildout -c $CONF annotate
@@ -40,5 +40,4 @@ after_failure:
   - bin/csslint --version
   - bin/jshint --version
   - bin/jscs --version
-  - which scss-lint
-  - scss-lint --version
+  - bin/scss-lint --version
