Update zc.buildout. Script and document pypa and rubygems workarounds.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,9 +21,10 @@ recipe = gp.recipe.node
 npms = csslint jshint jscs
 scripts = csslint jshint jscs
 
+# this fails on first buildout. So buildout twice.
 [rubygems]
 recipe = rubygemsrecipe
-gems = bundler scss_lint
+gems = scss_lint
 
 [test]
 recipe = zc.recipe.testrunner
@@ -72,7 +73,7 @@ eggs =
 [versions]
 # keep them in sync with requirements.txt
 setuptools = 38.2.4
-zc.buildout = 2.10.0
+zc.buildout = 2.11.0
 
 # release
 zest.releaser = 6.12.4
