--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,9 @@ matrix:
       env: CONF=extras.cfg EXTRAS_INSTALLED=true
 install:
   - pip install -r requirements.txt
-  - easy_install -U zc.buildout==2.10.0
+  - easy_install -U zc.buildout==2.11.0
   - buildout -c $CONF annotate
-  - buildout -N -t 3 -c $CONF
+  - buildout -N -t 3 -c $CONF || buildout -N -t 3 -c $CONF
 script:
   - bin/code-analysis
   - bin/test
