Fix ZPTLint by switching to spirit.zptlint and upgrading pins

--- a/extras.cfg
+++ b/extras.cfg
@@ -1,9 +1,10 @@
 [buildout]
 extends = travis.cfg
-parts += extras
+parts +=
+    extras
 
 [extras]
 recipe = zc.recipe.egg
 eggs =
     i18ndude
-    zptlint
+    spirit.zptlint
