--- a/buildout.cfg
+++ b/buildout.cfg
@@ -120,6 +120,7 @@ pyflakes = 1.0.0
 Pygments = 2.0.2
 pyroma = 1.8.3
 python-archive = 0.2
+python-gettext = 3.0
 pytz = 2015.7
 readme = 0.6.0
 readme-renderer = 0.7.0
@@ -136,29 +137,30 @@ zc.recipe.cmmi = 1.3.6
 zc.recipe.egg = 2.0.3
 zc.recipe.testrunner = 2.0.0
 zc.rst2 = 0.2
-zope.browser = 2.1.0
-zope.component = 4.2.2
-zope.configuration = 4.0.3
-zope.contentprovider = 4.0.0
-zope.contenttype = 4.1.0
-zope.event = 4.1.0
-zope.exceptions = 4.0.8
-zope.i18n = 4.1.0
-zope.i18nmessageid = 4.0.3
-zope.interface = 4.1.3
-zope.location = 4.0.3
-zope.pagetemplate = 4.2.1
-zope.proxy = 4.1.6
-zope.publisher = 4.2.1
-zope.schema = 4.4.2
-zope.security = 4.0.3
-zope.tal = 4.1.1
-zope.tales = 4.1.1
-zope.testing = 4.5.0
-zope.testrunner = 4.8.1
-zope.traversing = 4.0.0
-zptlint = 0.2.4
-zc.recipe.deployment = 1.3.0
-zc.zdaemonrecipe = 1.0.0
 WebOb = 1.7.4
 ZConfig = 3.2.0
+spirit.zptlint = 0.1
+zc.recipe.deployment = 1.3.0
+zc.zdaemonrecipe = 1.0.0
+zope.browser = 2.2.0
+zope.component = 4.4.1
+zope.configuration = 4.1.0
+zope.contentprovider = 4.1.0
+zope.contenttype = 4.1.0
+zope.deprecation = 4.3.0
+zope.event = 4.3.0
+zope.exceptions = 4.2.0
+zope.i18n = 4.3.1
+zope.i18nmessageid = 4.1.0
+zope.interface = 4.4.3
+zope.location = 4.0.3
+zope.pagetemplate = 4.3.0
+zope.proxy = 4.3.0
+zope.publisher = 4.3.2
+zope.schema = 4.5.0
+zope.security = 4.2.1
+zope.tal = 4.3.0
+zope.tales = 4.2.0
+zope.testing = 4.5.0
+zope.testrunner = 4.8.1
+zope.traversing = 4.2.0
