--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 develop = .
 parts =
     dependencychecker
+    extras
     node
     rubygems
     test
@@ -15,6 +16,12 @@ allow-picked-versions = false
 [dependencychecker]
 recipe = zc.recipe.egg
 eggs = z3c.dependencychecker
+
+[extras]
+recipe = zc.recipe.egg
+eggs =
+    i18ndude
+    spirit.zptlint
 
 [node]
 recipe = gp.recipe.node
