Autocheckout i18ndude python3 port from source

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,7 +11,14 @@ parts =
     releaser
 versions = versions
 
-allow-picked-versions = false
+allow-picked-versions = true
+
+extensions = mr.developer
+auto-checkout = i18ndude
+
+[sources]
+i18ndude = git https://github.com/gyst/i18ndude.git
+
 
 [dependencychecker]
 recipe = zc.recipe.egg
@@ -113,7 +120,7 @@ flake8-todo = 0.4
 gp.recipe.node = 0.12.7.1
 hexagonit.recipe.download = 1.7.1
 html5lib = 0.9999999
-i18ndude = 3.4.5
+i18ndude = 4.3
 isort = 4.2.0
 lxml = 4.1.1
 manuel = 1.8.0
