Autocheckout zc.buildout ResourceWarning fixes

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,10 +14,13 @@ versions = versions
 allow-picked-versions = true
 
 extensions = mr.developer
-auto-checkout = i18ndude
+auto-checkout =
+   i18ndude
+   zc.buildout
 
 [sources]
 i18ndude = git https://github.com/gyst/i18ndude.git
+zc.buildout = git https://github.com/gyst/buildout.git
 
 
 [dependencychecker]
