--- a/buildout.cfg
+++ b/buildout.cfg
@@ -71,13 +71,14 @@ flake8-extensions =
     pep8-naming
 jshint = False
 jshint-bin = ${buildout:directory}/bin/jshint
+chameleon-lint = False
+xmllint = True
 return-status-codes = False
 # those options only take effect if the dependencies are installed
 find-untranslated = True
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
 scsslint = True
 scsslint-bin = ${buildout:directory}/bin/scss_lint
-xmllint = True
 zptlint = True
 zptlint-bin = ${buildout:directory}/bin/zptlint
 
