Document scsslint dash/under gotcha

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -78,7 +78,7 @@ return-status-codes = False
 find-untranslated = True
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
 scsslint = True
-scsslint-bin = ${buildout:directory}/bin/scss_lint
+scsslint-bin = ${buildout:directory}/bin/scss-lint
 zptlint = True
 zptlint-bin = ${buildout:directory}/bin/zptlint
 
