Don't suppress jshint warnings in reference buildout, refs #94

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -71,6 +71,7 @@ flake8-extensions =
     pep8-naming
 jshint = False
 jshint-bin = ${buildout:directory}/bin/jshint
+jshint-suppress-warnings = False
 chameleon-lint = False
 xmllint = True
 return-status-codes = False
