--- a/buildout.cfg
+++ b/buildout.cfg
@@ -76,6 +76,8 @@ chameleon-lint = False
 xmllint = True
 return-status-codes = False
 # those options only take effect if the dependencies are installed
+dependencychecker = True
+dependencychecker-bin = ${buildout:directory}/bin/dependencychecker
 find-untranslated = True
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
 scsslint = True
@@ -150,7 +152,7 @@ testfixtures = 4.4.0
 transaction = 1.2.0
 Unidecode = 0.4.18
 wheel = 0.26.0
-z3c.dependencychecker = 1.15
+z3c.dependencychecker = 2.0
 zdaemon = 4.2.0
 zc.recipe.cmmi = 1.3.6
 zc.recipe.egg = 2.0.3
