--- a/buildout.cfg
+++ b/buildout.cfg
@@ -41,7 +41,7 @@ scripts = csslint jshint jscs
 # this fails on first buildout. So buildout twice.
 [rubygems]
 recipe = rubygemsrecipe
-gems = scss_lint
+gems = scss_lint scss_lint_reporter_checkstyle
 
 [test]
 recipe = zc.recipe.testrunner
