Add importchecker fixes #67

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,10 +16,12 @@ allow-picked-versions = true
 extensions = mr.developer
 auto-checkout =
    i18ndude
+   importchecker
    zc.buildout
 
 [sources]
 i18ndude = git https://github.com/gyst/i18ndude.git
+importchecker = git https://github.com/minddistrict/importchecker.git branch=OPS-714-python3
 zc.buildout = git https://github.com/gyst/buildout.git
 
 
@@ -31,6 +33,7 @@ eggs = z3c.dependencychecker
 recipe = zc.recipe.egg
 eggs =
     i18ndude
+    importchecker
     spirit.zptlint
 
 [node]
@@ -78,6 +81,8 @@ return-status-codes = False
 # those options only take effect if the dependencies are installed
 dependencychecker = True
 dependencychecker-bin = ${buildout:directory}/bin/dependencychecker
+importchecker = True
+importchecker-bin = ${buildout:directory}/bin/importchecker
 find-untranslated = True
 i18ndude-bin = ${buildout:directory}/bin/i18ndude
 scsslint = True
