importchecker branch was merged

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,7 +21,7 @@ auto-checkout =
 
 [sources]
 i18ndude = git https://github.com/gyst/i18ndude.git
-importchecker = git https://github.com/minddistrict/importchecker.git branch=OPS-714-python3
+importchecker = git https://github.com/minddistrict/importchecker.git
 zc.buildout = git https://github.com/gyst/buildout.git
 
 
